[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/clouds.gd" type="Script" id=1]
[ext_resource path="res://Assets/scroll_cloud_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/scroll_cloud_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/scroll_cloud_3.png" type="Texture" id=4]

[node name="Clouds" type="YSort"]
script = ExtResource( 1 )

[node name="cloud1" type="Sprite" parent="."]
position = Vector2( -1, 10 )
texture = ExtResource( 2 )

[node name="cloud2" type="Sprite" parent="."]
position = Vector2( -12, -2 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="."]
position = Vector2( 18, -8 )
texture = ExtResource( 4 )
